@@ -5,6 +5,8 @@
 	ftpfs uses new dial(2)
 	add qbypass to emu/port/qio.c
 	sed fix issue 49
+	add blowfish to keyring-crypt(2)
+	add challenge/response to factotum(2)
 20080115
 	add blowfish to keyring (not yet documented)
 	add explicit public and private key types to keyring (in development: not yet documented)
